[package]
name = "code_as_db_builder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
code_as_db_models = { path = "../code_as_db_models" }
butane = { version = "0.6", features = ["default", "sqlite", "sqlite-bundled"] }
